--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assignment-2</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <!-- navbar -->
+         <nav class="navbar-main">
+         <h1>Fitness</h1>
+         <div class="nav-btn-container">
+            <button class="nav-btn" id="orange-btn">Home</button>
+            <button class="nav-btn">Service</button>
+            <button class="nav-btn">Contact</button>
+            <button class="nav-btn">About</button>
+         </div>
+         <div class="nav-hamburger">
+            <i class="fa-solid fa-bars"></i>
+         </div>
+         </nav>
+    </header>
     <main></main>
     <footer></footer>
+    <script src="https://kit.fontawesome.com/f0c31f6f45.js" crossorigin="anonymous"></script>
 </body>
 </html>
