--- a/index.html
+++ b/index.html
@@ -22,6 +22,31 @@
             <i class="fa-solid fa-bars"></i>
          </div>
          </nav>
+         <!-- banner -->
+          <div class="banner">
+            <div class="banner-content">
+                <h1>Get body in <br> <span id="italic">shape</span> & stay <br> healthy</h1>
+                <p>A huge selection of health and fitness content, healthy recipes <br> and transformation stories to help you get fit and stay fit!</p>
+                <div>
+                    <button class="btn-primary">Join Club Now!</button>
+                    <button class="btn-scondary">Download App</button>
+                </div>
+            </div>
+            <div class="banner-img">
+                <img src="images/Images 2.png" alt="">
+                <div class="img-btn1">
+                    <h4>500+</h4>
+                    <p>Free Workout Videos</p>
+                </div>
+                <div class="img-btn2">
+                    <div id="red"><i class="fa-solid fa-circle"></i></div>
+                    <div class="">
+                        <h4>350+</h4>
+                        <p>Video tutorial</p>
+                    </div>
+                </div>
+            </div>
+          </div>
     </header>
     <main></main>
     <footer></footer>
