--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                     <p>Free Workout Videos</p>
                 </div>
                 <div class="img-btn2">
+                    <div id="play" style="display:none;">
+                        <i class="fa-regular fa-circle-play"></i>   
+                    </div>
                     <div id="red"><i class="fa-solid fa-circle"></i></div>
                     <div class="">
                         <h4>350+</h4>
