--- a/index.html
+++ b/index.html
@@ -51,7 +51,35 @@
             </div>
           </div>
     </header>
-    <main></main>
+    <main>
+        <section class="habits">
+            <h1>Change Your Habits</h1>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+            <div class="habit-card">
+                <div class="card">
+                    <img src="images/image 3.png" alt="exercise">
+                    <h4>Movement</h4>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="card">
+                    <img src="images/image 2.png" alt="exercise">
+                    <h4>Time</h4>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="card">
+                    <img src="images/image 4.png" alt="exercise">
+                    <h4>Practice</h4>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="card">
+                    <img src="images/image 5.png" alt="exercise">
+                    <h4>Weight Loss</h4>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                
+            </div>
+        </section>
+    </main>
     <footer></footer>
     <script src="https://kit.fontawesome.com/f0c31f6f45.js" crossorigin="anonymous"></script>
 </body>
