adding run section

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           </div>
     </header>
     <main>
+        <!-- habits -->
         <section class="habits">
             <h1>Change Your Habits</h1>
             <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
@@ -79,6 +80,17 @@
                 
             </div>
         </section>
+        <!-- run an action -->
+         <section class="run">
+            <div class="run-content">
+                <h1>Run an Extra Mile Easily</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                <button class="btn-primary">Join Now</button>
+            </div>
+            <div class="run-img">
+                
+            </div>
+         </section>
     </main>
     <footer></footer>
     <script src="https://kit.fontawesome.com/f0c31f6f45.js" crossorigin="anonymous"></script>
