added team section

--- a/index.html
+++ b/index.html
@@ -162,6 +162,51 @@
                 </div>
                 
             </section>
+
+            <!-- meet our team -->
+             <section class="team">
+                <h1>Meet Out Team</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <div class="team-img">
+                    <div class="grid-img">
+                    <img src="images/trainer1.png" alt="">
+                    <div class="grid-title">
+                        <h4>Jerome Bell</h4>
+                        <p>Trainer</p>
+                    </div>
+                    </div>
+                    <div class="grid-img"><img src="images/trainer2.png" alt="">
+                        <div class="grid-title">
+                            <h4>Cameron Willi</h4>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div class="grid-img"><img src="images/trainer3.png" alt="">
+                        <div class="grid-title">
+                            <h4>Darrell Steward</h4>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div class="grid-img"><img src="images/trainer4.png" alt="">
+                        <div class="grid-title">
+                            <h4>Dianne Russell</h4>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div class="grid-img"><img src="images/trainer5.png" alt="">
+                        <div class="grid-title">
+                            <h4>Cody Fisher</h4>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div class="grid-img"><img src="images/trainer6.png" alt="">
+                        <div class="grid-title">
+                            <h4>Theresa Webb</h4>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                </div>
+             </section>
     </main>
     <footer></footer>
     <script src="https://kit.fontawesome.com/f0c31f6f45.js" crossorigin="anonymous"></script>
