--- a/index.html
+++ b/index.html
@@ -208,7 +208,32 @@
                 </div>
              </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="footer-content">
+            <div class="footer">
+                <div id="span-p">
+                    <h1>Fitness</h1>
+                    <span><p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. <br> With hundreds of professional workouts.</p></span>
+                </div>
+                <div>
+                    <h3>Get Started</h3>
+                    <h6>Service</h6>
+                    <h6>Contact Us</h6>
+                    <h6>Affilite Program</h6>
+                    <h6>About Us</h6>
+                </div>
+                <div>
+                    <h3>Get Started</h3>
+                    <h6>Fitness</h6>
+                    <h6>Platform</h6>
+                    <h6>Workout Library</h6>
+                    <h6>App Design</h6>
+                </div>
+            </div>
+            <hr>
+            <p>All right reserved @Fitness 2024</p>
+        </section>
+    </footer>
     <script src="https://kit.fontawesome.com/f0c31f6f45.js" crossorigin="anonymous"></script>
 </body>
 </html>
