added unique section

--- a/index.html
+++ b/index.html
@@ -93,6 +93,36 @@
          </section>
          <!-- training and exercise -->
           <section class="training"></section>
+         
+          <!-- unique section -->
+          <section class="unique">
+            <div class="unique-title">
+                <h1>Exclusive GYM Equipments</h1>
+                <p>Gym equipments refers to the various tools and machines use to perform exercise and workout, aimed at improving fitness, strength, and over all health. </p>
+            </div>
+            <div class="unique-card">
+                <div class="card-box">
+                    <img src="images/IMG-20240810-WA0003.jpg" alt="">
+                    <h3>Barbell</h3>
+                    <p>A barbell is a piece of exercise equipment commonly used in weightlifting and strength training.</p>
+                    <button class="box-button">See Details</button>
+                </div>
+                <div class="card-box">
+                    <img src="images/IMG-20240810-WA0008.jpg" alt="">
+                    <h3>Exercise Bike</h3>
+                    <p>A exercise bike is a piece of exercise equipment commonly used in weightlifting and strength training.</p>
+                    <button class="box-button">See Details</button>
+                </div>
+                <div class="card-box">
+                    <img width="1000px" height="220px" src="images/WhatsApp Image 2024-08-11 at 12.10.52_502c6b70.jpg" alt="">
+                    <h3>Treadmill</h3>
+                    <p>A treadmill is a piece of exercise equipment commonly used in weightlifting and strength training.</p>
+                    <button class="box-button">See Details</button>
+                </div>
+                
+            </div>
+            <button class="btn-box">See More</button>
+          </section>
 
           <!-- bmi calculator -->
            <section class="bmi-heading">
