added play icon

--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
                     <p>Free Workout Videos</p>
                 </div>
                 <div class="img-btn2">
-                    <div id="play" style="display:none;">
-                        <i class="fa-regular fa-circle-play"></i>   
+                    <div>
+                        <div id="play">
+                            <i class="fa-regular fa-circle-play"></i>   
+                        </div>
+                        <div id="red"><i class="fa-solid fa-circle"></i></div>
                     </div>
-                    <div id="red"><i class="fa-solid fa-circle"></i></div>
                     <div class="">
                         <h4>350+</h4>
                         <p>Video tutorial</p>
