--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
-    <header>
+    <header id="header">
         <!-- navbar -->
          <nav class="navbar-main">
          <h1>Fitness</h1>
@@ -28,7 +28,8 @@
                 <h1>Get body in <br> <span id="italic">shape</span> & stay <br> healthy</h1>
                 <p>A huge selection of health and fitness content, healthy recipes <br> and transformation stories to help you get fit and stay fit!</p>
                 <div>
-                    <button class="btn-primary">Join Club Now!</button>
+                    <button class="btn-primary">Join  <span id="club">Club</span>  Now!
+                    </button>
                     <button class="btn-scondary">Download App</button>
                 </div>
             </div>
